--- a/communication/build.gradle
+++ b/communication/build.gradle
@@ -25,9 +25,11 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.data:spring-data-jpa:2.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.4'
+	implementation 'org.springframework.data:spring-data-jpa:2.7.3'
 	implementation 'org.hibernate:hibernate-entitymanager:5.6.11.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.4'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
 
 	implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
 	compileOnly 'org.projectlombok:lombok'
